--- a/html/index.html
+++ b/html/index.html
@@ -51,31 +51,30 @@
 			<div class="flex-container">
 				<input type="file" id="image_file" onchange="updateImage(true)" accept=".png,.jpg,.bmp,.webp,.jpeg">
 			</div>
-			<div class="flex-container">
+			<div class="flex-container options">
 				<div class="flex-group debug">
 					<label for="canvasSize">画布尺寸：</label>
 					<select id="canvasSize" onchange="updateCanvasSize()">
-						<option value="1.54_152_152">1.54_152_152 (152x152)</option>
-						<option value="1.54_200_200">1.54_200_200 (200x200)</option>
-						<option value="2.13_250_122">2.13_250_122 (250x122)</option>
-						<option value="2.66_296_152">2.66_296_152 (296x152)</option>
-						<option value="2.9_296_128">2.9_296_128 (296x128)</option>
-						<option value="2.9_384_168">2.9_384_168 (384x168)</option>
-						<option value="3.5_384_184">3.5_384_184 (384x184)</option>
-						<option value="3.7_416_240">3.7_416_240 (416x240)</option>
-						<option value="3.97_800_480">3.97_800_480 (800x480)</option>
-						<option value="4.2_400_300" selected>4.2_400_300 (400x300)</option>
-						<option value="5.79_792_272">5.79_792_272 (792x272)</option>
-						<option value="7.5_800_480">7.5_800_480 (800x480)</option>
-						<option value="10.2_960_640">10.2_960_640 (960x640)</option>
-						<option value="10.85_1360_480">10.85_1360_480 (1360x480)</option>
-						<option value="11.6_960_640">11.6_960_640 (960x640)</option>
-						<option value="4E_600_400">4E_600_400 (600x400)</option>
+						<option value="1.54_152_152">1.54 (152x152)</option>
+						<option value="1.54_200_200">1.54 (200x200)</option>
+						<option value="2.13_212_104">2.13 (212x104)</option>
+						<option value="2.13_250_122">2.13 (250x122)</option>
+						<option value="2.66_296_152">2.66 (296x152)</option>
+						<option value="2.9_296_128">2.9 (296x128)</option>
+						<option value="2.9_384_168">2.9 (384x168)</option>
+						<option value="3.5_384_184">3.5 (384x184)</option>
+						<option value="3.7_416_240">3.7 (416x240)</option>
+						<option value="3.97_800_480">3.97 (800x480)</option>
+						<option value="4.2_400_300" selected>4.2 (400x300)</option>
+						<option value="5.79_792_272">5.79 (792x272)</option>
+						<option value="7.5_800_480">7.5 (800x480)</option>
+						<option value="10.2_960_640">10.2 (960x640)</option>
+						<option value="10.85_1360_480">10.85 (1360x480)</option>
+						<option value="11.6_960_640">11.6 (960x640)</option>
+						<option value="4E_600_400">4E (600x400)</option>
 						<option value="7.3E6">7.3E6 (480x800)</option>
 					</select>
 				</div>
-			</div>
-			<div class="flex-container options">
 				<div class="flex-group debug">
 					<label for="ditherMode">颜色模式：</label>
 					<select id="ditherMode" onchange="updateImage(false)">
@@ -95,8 +94,6 @@
 						<option value="jarvis">Jarvis-Judice-Ninke</option>
 					</select>
 				</div>
-			</div>
-			<div class="flex-container options">
 				<div class="flex-group">
 					<label for="ditherStrength">抖动强度：</label>
 					<input type="range" min="0" max="5" step="0.1" value="1.0" id="ditherStrength" oninput="updateImage(false)">
