hide brush tools

--- a/html/index.html
+++ b/html/index.html
@@ -128,7 +128,7 @@
 						<button id="eraser-mode" title="橡皮擦" class="tool-button">🧽</button>
 						<button id="text-mode" title="添加文字" class="tool-button">T</button>
 					</div>
-					<div class="flex-group">
+					<div class="flex-group brush-tools">
 						<label for="brush-color">画笔：</label>
 						<select id="brush-color">
                             <option value="#000000">黑色</option>
