chore: Update biome configuration and enhance input placeholder text
- Updated the schema version in biome.json from 2.0.6 to 2.2.0 for improved compatibility.
- Refined file inclusion patterns in biome.json for better matching.
- Enhanced the placeholder text in index.html input field to provide clearer instructions for user interaction.

--- a/html/index.html
+++ b/html/index.html
@@ -116,7 +116,7 @@
 				<div class="text-input-section">
 					<div class="flex-container">
 						<div class="flex-group">
-							<input type="text" id="text-input" placeholder="输入文字" class="large-text-input">
+							<input type="text" id="text-input" placeholder="输入文字, 按回车键确认" class="large-text-input">
 						</div>
 						<div class="flex-group">
 							<button id="add-text-btn" class="primary large-button">添加文字</button>
