feat: move assets to public folder for vercel

--- a/html/index.html
+++ b/html/index.html
@@ -204,6 +204,7 @@
 
 		</div>
 	</div>
+	<!-- The path here will be resolved by Vercel to files under '/public' folder -->
 	<script type="text/javascript" src="js/dithering.js?v=20250731"></script>
 	<script type="text/javascript" src="js/paint.js?v=20250731"></script>
 	<script type="text/javascript" src="js/crop.js?v=20250731"></script>
